# WeldPathGuardian

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ros2-ci.yml
docker/: Dockerfile
docs/: architecture.md  development.md  failure-modes.md  performance-latest.json  performance-results.md
launch/: demo.launch.py  fault_demo.launch.py
scripts/: collect_performance.py  generate_demo_gif.py  run_static_checks.sh
src/seam_perception/: CMakeLists.txt  package.xml
src/seam_perception/include/seam_perception/: perception_utils.hpp
src/seam_perception/src/: seam_perception_node.cpp
src/seam_perception/test/: test_perception_utils.cpp
src/seam_sensor/: CMakeLists.txt  package.xml
src/seam_sensor/src/: seam_sensor_node.cpp
src/system_monitor/: CMakeLists.txt  package.xml
src/system_monitor/src/: system_monitor_node.cpp
src/system_monitor/test/: test_runtime_integration.py
src/weld_executor/: CMakeLists.txt  package.xml
src/weld_executor/include/weld_executor/: state_machine.hpp
src/weld_executor/src/: weld_executor_node.cpp
src/weld_executor/test/: test_executor_action_concurrency.py  test_state_machine.cpp
src/weld_interfaces/: CMakeLists.txt  package.xml
src/weld_interfaces/action/: ExecuteWeld.action
src/weld_interfaces/include/weld_interfaces/: fault_codes.hpp
src/weld_interfaces/msg/: FilteredSeam.msg  SeamObservation.msg  SystemStatus.msg  WeldPlan.msg  WeldWaypoint.msg
src/weld_planner/: CMakeLists.txt  package.xml
src/weld_planner/include/weld_planner/: planner_utils.hpp
src/weld_planner/src/: weld_planner_node.cpp
src/weld_planner/test/: test_planner_utils.cpp
src/weld_visualization/: CMakeLists.txt  package.xml
src/weld_visualization/src/: weld_visualization_node.cpp
test_data/: clean_seam.csv  missing_segment.csv  noisy_seam.csv
