<?xml version="1.0"?>
<package format="3">
  <name>seam_perception</name>
  <version>0.1.0</version>
  <description>Validation and smoothing for simulated seam observations.</description>
  <maintainer email="kaustav.kalra123@gmail.com">Kaustav Kalra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>weld_interfaces</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
