<?xml version="1.0"?>
<package format="3">
  <name>seam_sensor</name>
  <version>0.1.0</version>
  <description>Simulated weld seam sensor node.</description>
  <maintainer email="manish@example.com">Manish Kalra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>weld_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

