<?xml version="1.0"?>
<package format="3">
  <name>system_monitor</name>
  <version>0.1.0</version>
  <description>Health metrics and observability node for WeldPath Guardian.</description>
  <maintainer email="manish@example.com">Manish Kalra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>weld_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
