<?xml version="1.0"?>
<package format="3">
  <name>weld_executor</name>
  <version>0.1.0</version>
  <description>Fault-aware weld execution action server and state machine.</description>
  <maintainer email="manish@example.com">Manish Kalra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>weld_interfaces</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
