<?xml version="1.0"?>
<package format="3">
  <name>weld_interfaces</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 messages and actions for WeldPath Guardian.</description>
  <maintainer email="kaustav.kalra123@gmail.com">Kaustav Kalra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
