<?xml version="1.0"?>
<package format="3">
  <name>weld_visualization</name>
  <version>0.1.0</version>
  <description>RViz status visualization helpers.</description>
  <maintainer email="manish@example.com">Manish Kalra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>weld_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
